# OCT_Merge

./: pyproject.toml  shenyue1.md  task.md
artifacts/case_smoke/: case_summary.json
artifacts/case_smoke_ps8/: case_summary.json
artifacts/cuda_smoke_run/: real_pipeline_summary.json
artifacts/preview_smoke_ps8/: benchmark_sweep.json  task_simulation_summary.json
artifacts/quarter_scale_debug/: case_summary.json
artifacts/real_pipeline_bundle_smoke/: real_pipeline_summary.json
artifacts/real_pipeline_smoke/: real_pipeline_summary.json
artifacts/web_case_smoke/: case_summary.json
artifacts/web_preview_app/: index.html  payload.json
artifacts/web_preview_smoke/: task_simulation_summary.json
docs/: 2026-04-23-half-scale-task-design-spec.md  2026-04-23-half-scale-task-implementation-plan.md  2026-04-24-real-task-design-spec.md
report_bundle/quarter_scale_task_bundle/: README_使用说明.txt  bundle_manifest.json
report_bundle/real_task_oct_merge_bundle/: README.txt  (+2 more)
scripts/: build_preview_web_app.py  build_real_task_report_bundle.py  build_report_bundle.py  check_4090_feasibility.py  display_real_data.py  generate_half_scale_case.py  refresh_report_payload.py  run_benchmark_sweep.py  run_preview_pipeline.py
tests/: test_benchmark_sweep.py  test_feasibility.py  test_gpu_global_registrar.py  test_half_scale_task.py  test_local_refiner.py  test_memory_planner.py  test_real_data_entry.py  test_real_input_io.py  test_real_pipeline.py  test_report_bundle.py  test_report_payload_refresh.py  test_slice_benchmark.py  test_volume_source.py  test_web_payload.py
(+60 files in other folders)
