[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "oct-merge-task"
version = "0.1.0"
description = "Real-task-oriented OCT merge pipeline with streaming IO and GPU-ready registration."
requires-python = ">=3.9"
dependencies = [
  "numpy",
  "torch",
  "tifffile",
]
